--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,7 @@ selectors = "0.22"
 serde = { version = "1.0.120", features = ["derive"] }
 serde_json = "1.0.61"
 url = "2.2.0"
+
+[profile.release]
+lto = "fat"
+codegen-units = 1
